fixed sentiment scaling

--- a/cleanData.ipynb
+++ b/cleanData.ipynb
@@ -61,80 +61,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>overview</th>\n",
-       "      <th>media</th>\n",
-       "      <th>source</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>Following For You\\r\\nQ\\r\\nYOU DON'T have WATER...</td>\n",
-       "      <td>Other</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>Unapologetic OB\\r\\n-BE BRAVE BE\\r\\n+\\r\\n4,799\\...</td>\n",
-       "      <td>Other</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>23:31\\r\\n14%\\r\\nX\\r\\n00\\r\\nZama Shange\\r\\nm.fa...</td>\n",
-       "      <td>Facebook</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>Facebook</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>Other Website</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "  overview                                              media         source\n",
-       "0      NaN  Following For You\\r\\nQ\\r\\nYOU DON'T have WATER...          Other\n",
-       "1      NaN  Unapologetic OB\\r\\n-BE BRAVE BE\\r\\n+\\r\\n4,799\\...          Other\n",
-       "2      NaN  23:31\\r\\n14%\\r\\nX\\r\\n00\\r\\nZama Shange\\r\\nm.fa...       Facebook\n",
-       "3      NaN                                                NaN       Facebook\n",
-       "4      NaN                                                NaN  Other Website"
+       "(307, 3)"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -144,7 +80,7 @@
     "\n",
     "# Some information does not have a supporting screenshot \n",
     "df_filtered = df.drop_duplicates()\n",
-    "df_filtered.head()\n"
+    "df_filtered.shape\n"
    ]
   },
   {
